# cpp_template

./: .gitignore  CMakeLists.txt  Dependency.cmake  LICENSE.md  README.md
src/: main.cpp
